# VectorDatabase

./: .gitignore  Basics_fastapi.py  Dockerfile  README.md  conftest.py  docker-compose.test.yml  docker-compose.yml  exceptions.py  main.py  out.md  pyproject.toml  requirements.txt  schemas.py  services.py  structure.md  test_api.py  undestand.py
src/api/: dependencies.py  schemas.py
src/api/endpoints/: chunks.py  documents.py  libraries.py  search.py
src/api/schemas/: chunk.py  metadata
src/core/: exceptions.py  models.py
src/core/indexing/: avl_index.py  base_index.py  enums.py  flat_index.py  index_factory.py  lsh_index.py
src/infrastructure/: config.py
src/infrastructure/concurrency/: rwlock.py
src/infrastructure/embeddings/: base_client.py  cohere_client.py  fake_client.py
src/infrastructure/repositories/: base_repo.py  in_memory_repo.py
src/services/: chunk_service.py  document_service.py  library_service.py  search_service.py
tests/: config.py  fakes.py  test_embeddings_integration.py
tests/test_api/: conftest.py  test_endpoints.py  test_search_endpoints.py
tests/test_core/: test_avl_index.py  test_lsh_index.py
tests/test_infraestructure/: test_rwlock.py
tests/test_services/: test_chunk_services.py  test_document_services.py  test_library_services.py  test_search_services.py  test_services.py
