[project]
name = "learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"fastapi>=0.121.2",
	"numpy>=2.3.4",
	"pydantic>=2.12.4",
	"pydantic-settings>=2.12.0",
	"pytest>=9.0.1",
	"uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "."
